Archive2/a0/22acb4447d7851/output
main.cpp:17:39: error: no member named 'type' in 'std::common_type<ChildA, ChildB>'
    std::common_type<ChildA, ChildB>::type::bar foo = 100; // so std::common_type<ChildA, ChildB>::type should be Parent because both ChildA and ChildB can be implicitly converted to Parent.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
1 error generated.
